cambie el writer a stringbuilder